fix: pom.xml server + client