@@ -18,9 +18,8 @@
   <properties>
     <gson.version>2.10.1</gson.version>
     <javafx.version>17.0.6</javafx.version>
-    <junit.jupiter.version>5.10.0</junit.jupiter.version>
-    <mockito.version>5.11.0</mockito.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jacocoArgLine></jacocoArgLine>
   </properties>
 
   <dependencies>
@@ -60,7 +59,7 @@
       <version>${gson.version}</version>
     </dependency>
 
-    <!-- JUnit 5 -->
+    <!-- Testing -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
@@ -68,7 +67,6 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Mockito -->
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
@@ -80,6 +78,13 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
       <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+      <version>${byte-buddy.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -102,10 +107,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-
+        <version>3.13.0</version>
         <configuration>
-          <release>17</release>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
 
@@ -113,10 +118,16 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.5</version>
-
+        <version>${maven.surefire.version}</version>
         <configuration>
           <useModulePath>false</useModulePath>
+          <argLine>
+            @{jacocoArgLine}
+            -Dnet.bytebuddy.experimental=true
+            --add-opens java.base/java.util=ALL-UNNAMED
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
 
@@ -137,25 +148,25 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.11</version>
+        <version>${jacoco.version}</version>
 
         <executions>
-
           <execution>
+            <id>prepare-agent</id>
             <goals>
               <goal>prepare-agent</goal>
             </goals>
+            <configuration>
+                <propertyName>jacocoArgLine</propertyName>
+            </configuration>
           </execution>
-
           <execution>
             <id>report</id>
             <phase>test</phase>
-
             <goals>
               <goal>report</goal>
             </goals>
           </execution>
-
         </executions>
       </plugin>
 
@@ -164,4 +175,3 @@
   </build>
 
 </project>
-
